Experiments: Add tab:RAG_time

--- a/src/experiments_and_results.tex
+++ b/src/experiments_and_results.tex
@@ -78,7 +78,11 @@ This approach ensures that the final selection of models for evaluation represen
 
 \input{src/tables/models_balanced.tex}
 
-\section{RAG Optimization}
+\section{\ac{RAG} Optimization}
+
+\reftab{tab:RAG_time} presents the retrieval time associated with the \ac{GTE}\textsubscript{Small} model for varying chunk sizes.
+
+\input{src/tables/RAG_time.tex}
 
 \input{src/tables/RAG_evaluation.tex}
 
