--- a/src/tables/RAG_time.tex
+++ b/src/tables/RAG_time.tex
@@ -11,7 +11,7 @@
       4096  & 74s & 77s & 79s & 79s & 78s \\
       \bottomrule
     \end{tabular}
-    \caption{Time of \ac{RAG} evaluation with different chunk sizes.}
+    \caption{Time required for \ac{RAG} to generate document part embeddings at various chunk sizes.}
     \label{tab:RAG_time}
   \end{table*}
   
