--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -387,7 +387,7 @@ The test set comprises two components: a technical manual and a set of 200 quest
 For the embedding generation stage within \ac{RAG}, we will leverage the GTE\textsubscript{Small} model as popular small model with good \ac{MTEB} rating.
 
 For the \ac{LLM} component of \ac{RAG}, we will utilize GPT-3.5-turbo \cite{brown2020language}.
-The quality of the answers will be controlled and verified using GPT-4o \footnote{Information about GPT-4o on OpenAI website: \url{https://upv.gov.cz/}}.
+The quality of the answers will be controlled and verified using GPT-4o \footnote{Information about GPT-4o on OpenAI website: \url{https://openai.com/index/hello-gpt-4o/}}.
 
 
 
