--- a/src/tables/RAG_evaluation.tex
+++ b/src/tables/RAG_evaluation.tex
@@ -4,11 +4,11 @@
       \toprule
       $S_{chunk}$ & $K$ & ACC & $t_{mean}$ \\
       \midrule
-      256  & 12 & N/A & 131s \\
-      512  & 6  & N/A & 161s \\
-      1024 & 3  & N/A & 162s \\
-      2048 & 2  & N/A & 115s \\
-      4096 & 1  & N/A & 77s \\
+      256  & 12 & 0.435 & 131s \\
+      512  & 6  & 0.575 & 161s \\
+      1024 & 3  & 0.645 & 162s \\
+      2048 & 2  & 0.640 & 115s \\
+      4096 & 1  & \textbf{0.670} & \textbf{77s} \\
       \bottomrule
     \end{tabular}
     \caption{RAG evaluation with different parameters.}
