--- a/src/tables/RAG_time.tex
+++ b/src/tables/RAG_time.tex
@@ -11,7 +11,8 @@
       4096  & 77s & 81s & 81s & 92s & 86s \\
       \bottomrule
     \end{tabular}
-    \caption{Time required for \ac{RAG} to generate document part embeddings at various chunk sizes.}
+    \caption{Time required for \ac{RAG} to generate document part embeddings at various chunk sizes.
+    Where $S_{chunk}$ represents size of the chunk in characters and $t_n$ is time of $n_{th}$ experiment.}
     \label{tab:RAG_time}
   \end{table*}
   
