change Natalia to Natallia

--- a/src/acknowledgments.tex
+++ b/src/acknowledgments.tex
@@ -8,7 +8,7 @@ His guidance and expertise were instrumental in the completion of this research.
 I am also deeply grateful to my colleague, Bc. Adam Jirkovský, for his significant contribution to this research.
 Adam's expertise and the code he developed played a crucial role in making this work possible.
 
-Furthermore, I extend my heartfelt thanks to my family: Ina Zviazdova, Viachaslau Zviazdou, Maryia Zviazdova, Natalia Pankova, Inessa Davtyan.
+Furthermore, I extend my heartfelt thanks to my family: Ina Zviazdova, Viachaslau Zviazdou, Maryia Zviazdova, Natallia Pankova, Inessa Davtyan.
 Their unwavering moral and financial support, along with their constant encouragement, were a source of strength throughout my academic journey.
 
 Finally, I would like to thank my friends, Vsevolod Tiemnohorov, Viachaslau Radzeuski, and Stsiapan Belaushka, for their unwavering support during this challenging yet rewarding experience.
