--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -138,7 +138,7 @@ This selection encompasses three distinct categories:
     This inclusion enables an assessment of how these models generalize to the Czech language, providing insights into their adaptability across languages.
   \item \textbf{Popular Monolingual Models from the \ac{MTEB} (rank is lower than 50)}:
     In addition to multilingual models, this selection will also include well-regarded monolingual models (models trained on a single language) from the \ac{MTEB}.
-    This allows for a comparative analysis of how these models, potentially trained on English or other high-resource languages, perform on the Czech dataset.
+    This allows for a comparative analysis of how these models, potentially trained on English or other high-resource languages.
 \end{enumerate}
 
 To ensure transparency, reproducibility, and foster community development, this study will exclusively evaluate open-source text embedding models.  Furthermore, to prioritize computational efficiency and applicability to our research setting, we will restrict our evaluation to models with a parameter size of less than 1 billion.
