--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -1,31 +1,6 @@
 %!TEX root = ../main.tex
 
-\chapter{Conclusion DRAFT\label{chap:conclusion}}
-
-% In this thesis we focused on comparing traditional methods for text representation and transformer-based methods.
-% We reviewed architectures, work principles, strengths, limitation, uniqueness and purposes of the traditional methods of text representations.
-% We reviewed Transformer architecture.
-% We describe BERT model and explain its training process. Also we described BERT strenghts.
-% We reviewed two evaluation methods to measure quality of the models for our task.
-% After we reviewed ideas of \ac{RAG} and principles of work. After we reviewed \ac{RAG} architecture and discuss about parameters, that can affect accuracy and rightness of its work.
-
-% Next we discussed about chosen language and its grammatical representation, in result we choosed diacritics and diacriticless versions of texts.
-% Next was review of UPV FAQ benchmark.
-% After we defined baseline using fasttext model.
-% Next we chose transformer based models to evaluate.
-% In result we choosed 15 groups of models that expands to 37 models.
-
-% After we discussed parameters and evaluation process of \ac{RAG} and decided to test 5 sizes of chunks of to use in \ac{RAG}.
-
-% Next we present evaluation results, where most models have above deadline results.
-% We discuss about models performances and reasons its performances.
-% We define best model of the evaluation that was \ac{mE5}\textsubscript{Large} and present confussion matrix of its evaluation of one of the benchmark subset.
-% After result analys we defined balanced models, that has best performances for its model size.
-% That models are SimCSE-RetroMAE-Small, small version of \ac{GTE} and all sized of \ac{mE5}.
-
-% In second part of evaluation we focused on evaluation \ac{RAG} algorithm with different chunk size, wherein computing its factuality and computational efficiency.
-% We define, that the best chunk size is TODO.
-% We analyze this evaluation TODO.
+\chapter{Conclusion \label{chap:conclusion}}
 
 This thesis investigated the effectiveness of transformer-based models for text representation compared to traditional methods in the context of semantic similarity assessment for Czech text.
 
