--- a/main.tex
+++ b/main.tex
@@ -13,8 +13,8 @@
 \newcommand{\Field}{Artificial Intelligence and Computer Science}
 % \newcommand{\Title}{My Thesis Title\\[0.5em]Can Span Multiple Lines}
 \newcommand{\Title}{From FastText to Transformer \\[0.05em]Models, and their Application in \\[0.2em]Retrieval-Augmented Generation}
-\newcommand{\Keywords}{\ac{NLP}, Word Embedding, Transformers, \ac{RAG}, \ac{QA}, \ac{STS}}
-\newcommand{\KlicovaSlova}{Zpracování přirozeného jazyka, Word Embedding, Transformátory, \ac{RAG}, \ac{QA}, Sémantická Podobnost Textu}
+\newcommand{\Keywords}{\ac{NLP}, Word Embedding, Transformers, FastText, \ac{RAG}, \ac{QA}, \ac{STS}}
+\newcommand{\KlicovaSlova}{Zpracování přirozeného jazyka, Word Embedding, Transformátory, FastText, \ac{RAG}, \ac{QA}, Sémantická Podobnost Textu}
 \newcommand{\Year}{2024}
 \newcommand{\Month}{May}
 \newcommand{\Date}{\Month~\Year}
