Change schemes design to thick

--- a/src/fig/tikz/RAG_scheme.tex
+++ b/src/fig/tikz/RAG_scheme.tex
@@ -3,7 +3,7 @@
 % https://github.com/hkproj/retrieval-augmented-generation-notes/blob/main/Slides.pdf
 
 \begin{tikzpicture}[
-    longnode/.style={rectangle, rounded corners=.5em, draw=black!60, very thick, align=left, minimum height=1.7em, minimum width=9em},
+    longnode/.style={rectangle, rounded corners=.5em, draw=black!60, thick, align=left, minimum height=1.7em, minimum width=9em},
     emptylong/.style={longnode, draw=none},
     highnode/.style={longnode, minimum height=10.2em},
     line width=1pt, black
