--- a/src/fig/tikz/evolution_text_representaion.tex
+++ b/src/fig/tikz/evolution_text_representaion.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}
     %Nodes
-    \begin{scope}[every node/.style={rectangle, draw=black!60, very thin, align=left, minimum width=10em}]
+    \begin{scope}[every node/.style={rectangle, draw=black!60, thick, align=left, minimum width=10em}]
     \node (Word2Vec)     []                  {Word2Vec};
     \node (GloVe)        [below=of Word2Vec] {\ac{GloVe}};
     \node (FastText)     [below=of GloVe]    {FastText};
