--- a/src/fig/tikz/diacritics_diacriticless.tex
+++ b/src/fig/tikz/diacritics_diacriticless.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}
     %Nodes
-    \begin{scope}[every node/.style={rectangle, draw=black!60, very thin, align=left, minimum width=12em, minimum height=1.7em}]
+    \begin{scope}[every node/.style={rectangle, draw=black, thick, align=left, minimum width=12em, minimum height=1.7em}]
     \node (acute_diacritics)       []                             {á $\vert$ é $\vert$ í $\vert$ ó $\vert$ ú $\vert$ ý};
     \node (acute_diacriticless)    [right=of acute_diacritics]    {a $\vert$ e $\vert$ i $\vert$ o $\vert$ u $\vert$ y};
     \node (caron_diacritics)       [below=of acute_diacritics]    {č $\vert$ ď $\vert$ ě $\vert$ ň $\vert$ ř $\vert$ š $\vert$ ť $\vert$ ž};
