--- a/src/fig/tikz/skip_gram_scheme.tex
+++ b/src/fig/tikz/skip_gram_scheme.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}[
     framed,
-    squarednode/.style={rectangle, draw=black!60, very thick, minimum size=5mm},
+    squarednode/.style={rectangle, draw=black, very thick, minimum size=5mm},
     emptysquare/.style={squarednode, draw=none},
     largedrectangle/.style={squarednode, minimum width=10mm, minimum height=15mm},
     emptyrectangle/.style={squarednode, draw=none,minimum width=10mm},
