intro: add ML acro

--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -6,7 +6,7 @@
 The human language, with its nuances and complexities, presents a significant challenge for machines to understand.
 \ac{NLP} bridges this gap, and at its core lies the critical concept of text representation.
 This process acts as a translator, bridging the gap between the richness of text and the numerical language that machines understand.
-By effectively capturing the meaning within words and their relationships, text representation empowers \ac{NLP} models to leverage machine learning's capabilities.
+By effectively capturing the meaning within words and their relationships, text representation empowers \ac{NLP} models to leverage capabilities of the \ac{ML}.
 From sentiment analysis to machine translation, this ability to represent meaning fuels the advancements in \ac{NLP}, enabling machines to interact with and decipher human language with ever-increasing accuracy.
 
 \section{Evolution of text representation methods}
