main: remove supervisorspecialist, remove comments, remove ac reset after table of contents

--- a/main.tex
+++ b/main.tex
@@ -8,10 +8,8 @@
 \newcommand{\Author}{Yauheni Zviazdou}
 \newcommand{\Department}{Department of Cybernetics}
 \newcommand{\Supervisor}{Ing. Jan Šedivý, CSc.}
-\newcommand{\SupervisorSpecialist}{Ing. My Specialist, Ph.D.}
 \newcommand{\Programme}{Open Informatics}
 \newcommand{\Field}{Artificial Intelligence and Computer Science}
-% \newcommand{\Title}{My Thesis Title\\[0.5em]Can Span Multiple Lines}
 \newcommand{\Title}{From FastText to Transformer \\[0.05em]Models, and their Application in \\[0.2em]Retrieval-Augmented Generation}
 \newcommand{\Keywords}{\ac{NLP}, Word Embedding, Transformers, FastText, \ac{RAG}, \ac{QA}, \ac{STS}}
 \newcommand{\KlicovaSlova}{Zpracování přirozeného jazyka, Word Embedding, Transformátory, FastText, \ac{RAG}, \ac{QA}, Sémantická Podobnost Textu}
@@ -107,6 +105,7 @@
 %% --------------------------------------------------------------
 
 \tableofcontents
+\acresetall
 
 \conditionalClearPage
 
