change fastText to FastText

--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -23,7 +23,7 @@ Recognizing the importance of language-specific analysis, Czech was chosen as th
 The study incorporated both diacritic and diacritic-less text versions to account for potential variations within Czech text data.
 The established UPV FAQ benchmark served as the standard for consistent and reliable evaluation.
 
-A baseline performance metric was established using the fastText model.
+A baseline performance metric was established using the FastText model.
 This baseline provided a benchmark for comparing the performance of the transformer-based models.
 Following the establishment of this baseline, a diverse selection of 15 transformer-based model groups (encompassing a total of 37 models) were chosen for further evaluation.
 
