--- a/src/discussion.tex
+++ b/src/discussion.tex
@@ -3,8 +3,8 @@
 \chapter{Discussion\label{chap:discussion}}
 
 \section{Findings}
-This study explores the potential benefits of transformer-based models for text representation compared to traditional methods like fastText.
-Interestingly, the SimCSE-RetroMAE-Small transformer model achieves superior performance despite having significantly fewer parameters than fastText.
+This study explores the potential benefits of transformer-based models for text representation compared to traditional methods like FastText.
+Interestingly, the SimCSE-RetroMAE-Small transformer model achieves superior performance despite having significantly fewer parameters than FastText.
 This finding suggests that the inherent architecture of transformer models may be particularly adept at capturing semantic meaning within textual data.
 
 Furthermore, the study reveals that certain monolingual models, even those not specifically trained on the Czech language used for evaluation, achieve surprisingly positive results.
