--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../main.tex
 
 \begin{acronym}
-  % Usual CS acronyms
+  % Usual NLP acronyms
   \acro{NLP}[NLP]{Natural Language Processing}
   \acro{RAG}[RAG]{Retrieval-Augmented Generation}
   \acro{STS}[STS]{Semantic Textual Similarity}
@@ -17,13 +17,10 @@
   \acro{CBOW}[CBOW]{Continuous Bag-of-Words}
   \acro{GloVe}[GloVe]{Global vectors}
   
-  % Benchmarks
-  \acro{MTEB}[MTEB]{Massive Text Embedding Benchmark}
-  
-  % Models
-  \acro{mBERT}[mBERT]{Multilingual Bidirectional Encoder Representations from Transformers}
+  % Transformer models
   \acro{BERT}[BERT]{Bidirectional Encoder Representations from Transformers}
   \acro{ALBERT}[ALBERT]{A Lite BERT}
+  \acro{mBERT}[mBERT]{Multilingual Bidirectional Encoder Representations from Transformers}
   \acro{mE5}[mE5]{Multilingual E5}
   \acro{LaBSE}[LaBSE]{Language-Agnostic BERT Sentence Embedding}
   \acro{XLM-R}[XLM-R]{XLM-Roberta}
@@ -35,4 +32,7 @@
   \acro{NSP}[NSP]{Next Sentence Prediction}
   \acro{SimCSE}[SimCSE]{Simple Contrastive Learning of Sentence Embeddings}
   \acro{RetroMAE}[RetroMAE]{Retrieval-oriented Language Models Via Masked Auto-Encoder}
+
+  % Benchmarks
+  \acro{MTEB}[MTEB]{Massive Text Embedding Benchmark}
 \end{acronym}
