bib: reorder, add TF-IDF, BoW

--- a/main.bib
+++ b/main.bib
@@ -1,3 +1,19 @@
+% TF-IDF
+@misc{wiki_tf_idf,
+  author     = {Wikipedia Contributors},
+  title      = {TF-IDF - Wikipedia},
+  url        = {https://en.wikipedia.org/wiki/Tf%E2%80%93idf},
+  accessdate = {2024-05-24}
+}
+
+% BoW
+@misc{wiki_BoW,
+  author     = {Wikipedia Contributors},
+  title      = {Bag-of-words model - Wikipedia},
+  url        = {https://en.wikipedia.org/wiki/Bag-of-words_model},
+  accessdate = {2024-05-24}
+}
+
 % Word2Vec
 @misc{mikolov2013efficient,
   title         = {Efficient Estimation of Word Representations in Vector Space},
