--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -51,7 +51,7 @@ Based on the evaluation results, a chunk size of 4096 characters was identified 
 
 % \section{CONCLUSION STRUCTURE}
 % \begin{itemize}
-%     \item Summarize the key takeaways from the research, emphasizing the most effective text representation model for RAG in technical QA based on the evaluation criteria.
-%     \item Briefly mention the trade-offs between factuality, CPU usage, and other factors in selecting representations for RAG.
-%     \item Suggest potential future research directions, such as exploring other text representation methods or evaluating RAG performance on different datasets.
+%     \item Summarize the key takeaways from the research, emphasizing the most effective text representation model for \ac{RAG} in technical \ac{QA} based on the evaluation criteria.
+%     \item Briefly mention the trade-offs between factuality, CPU usage, and other factors in selecting representations for \ac{RAG}.
+%     \item Suggest potential future research directions, such as exploring other text representation methods or evaluating \ac{RAG} performance on different datasets.
 % \end{itemize}
