--- a/src/discussion.tex
+++ b/src/discussion.tex
@@ -11,7 +11,7 @@ Furthermore, the study reveals that certain monolingual models, even those not s
 This suggests that some level of semantic similarity can be identified between languages with structural similarities, even without targeted training.
 However, it is important to acknowledge that these models might not reach optimal performance for tasks involving Czech text analysis.
 
-This study observes that unsupervised training methods employed by some models (e.g., MLM and NSP) lead to lower performance compared to supervised training approaches.
+This study observes that unsupervised training methods employed by some models (e.g., \ac{MLM} and \ac{NSP}) lead to lower performance compared to supervised training approaches.
 This suggests that supervised training on high-quality, task-specific datasets might be necessary to achieve optimal performance in tasks involving semantic similarity assessment.
 
 Results indicate that embedding generation for less segmented text is faster compared to highly segmented text.
@@ -39,7 +39,7 @@ This optimal configuration could then be compared to performance on the newly cr
 
 % \section{DISCUSSION STRUCTURE}
 % \begin{itemize}
-%     \item Interpret the overall findings and their implications for choosing suitable text representations for RAG in technical\ac{QA} tasks.
+%     \item Interpret the overall findings and their implications for choosing suitable text representations for \ac{RAG} in technical\ac{QA} tasks.
 %     \item Discuss the strengths and limitations of the chosen evaluation methods.
 %     \item Address potential challenges encountered during the study and suggest improvements for future research.
 % \end{itemize}
