--- a/src/tables/RAG_evaluation.tex
+++ b/src/tables/RAG_evaluation.tex
@@ -11,7 +11,7 @@
       4096 & 1  & \textbf{0.670} & \textbf{83s} \\
       \bottomrule
     \end{tabular}
-    \caption{RAG evaluation with different parameters.}
+    \caption{\ac{RAG} evaluation with different parameters.}
     \label{tab:RAG_evaluation}
   \end{table*}
   
