--- a/src/experiments_and_results.tex
+++ b/src/experiments_and_results.tex
@@ -38,7 +38,7 @@ This suggests that some level of semantic similarity can be captured between lan
 However, it is important to acknowledge that languages possess distinct vocabularies, grammatical structures, and cultural nuances.
 Models trained solely on a language like English may struggle to fully grasp the intricacies of Czech text, potentially hindering their ability to achieve optimal performance in tasks involving semantic similarity assessment.
 
-In contrast, several monolingual models, particularly the Nomic Embed models, the small version of GTE, and the large version of GTE-v1.5, exhibited performance exceeding the baseline.
+In contrast, several monolingual models, particularly the Nomic Embed models, the small version of \ac{GTE}, and the large version of \ac{GTE}-v1.5, exhibited performance exceeding the baseline.
 This highlights the potential effectiveness of certain model architectures, even when not specifically trained on the target language.
 Further investigation into the specific characteristics of these models that contribute to their success in this context might provide valuable insights for future research.
 
@@ -106,6 +106,6 @@ This suggests that providing the model with larger text segments during the embe
 % \begin{itemize}
 %     \item Present the results of the evaluation for different text representations using analogy tests and confusion matrices.
 %     \item Discuss the findings regarding the effectiveness of each representation model for capturing semantic relationships in technical text.
-%     \item Analyze the results from the RAG evaluation, highlighting the impact of different representations and text chunk sizes on answer generation quality and CPU efficiency.
+%     \item Analyze the results from the \ac{RAG} evaluation, highlighting the impact of different representations and text chunk sizes on answer generation quality and CPU efficiency.
 %     \item Identify the representation model that achieves a balance between factuality of answers and computational demands.
 % \end{itemize}
