--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -97,7 +97,7 @@ Given the nature of this dataset, it is expected to include misspellings and tex
   \item Breaking lines into individual sentences
   \item Converting all text to lowercase
   \item Removing lines containing words exceeding 30 characters
-  \item Excluding HTML tags with less than 100 characters
+  \item Excluding Hypertext Markup Language (HTML) tags with less than 100 characters
   \item Removing lines surpassing 500 characters
   \item Omitting words longer than 21 characters
 \end{enumerate}
@@ -131,7 +131,7 @@ This selection encompasses three distinct categories:
 
 \begin{enumerate}
   \item \textbf{Existing Czech Embedding Models}:
-    This category incorporates established Czech embedding models developed within the Czech NLP community.
+    This category incorporates established Czech embedding models developed within the Czech \ac{NLP} community.
     Their inclusion allows for a focused analysis of how these models perform specifically for the Czech language.
   \item \textbf{Multilingual Models from the \ac{MTEB}}:
     The evaluation will leverage highly regarded multilingual models readily available through the \ac{MTEB}.
@@ -189,7 +189,7 @@ The models are trained using techniques like pre-training, knowledge distillatio
 % Multilingual models
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % mBERT
-\subsubsection{mBERT} \label{model:mbert}
+\subsubsection{\ac{mBERT}} \label{model:mbert}
 \ac{mBERT} \cite{devlin2019bert} leverages the same transformer-based architecture as the original \ac{BERT} model but boasts an increased number of parameters (178M) to enhance its capabilities.
 A key distinction of \ac{mBERT} lies in its ability to understand and process text data across multiple languages.
 To achieve this multilingual proficiency, \ac{mBERT} is trained on a massive dataset sourced from Wikipedia entries in 104 different languages.
@@ -205,14 +205,14 @@ The first phase involves weakly-supervised contrastive pre-training on about 1 b
 The second phase is supervised fine-tuning on approximately 1.6 million data points from high-quality labeled datasets (MS MARCO \cite{bajaj2018ms}, Natural Questions (NQ) \cite{kwiatkowski2019natural}, TriviaQA \cite{joshi2017triviaqa}, SQuAD \cite{rajpurkar2016squad}, etc.).
 
 % LaBSE
-\subsubsection{LaBSE} \label{model:labse}
+\subsubsection{\ac{LaBSE}} \label{model:labse}
 \ac{LaBSE} model \cite{feng2022languageagnostic}, developed by Google, is a state-of-the-art model for generating sentence embeddings that are effective across 109 languages.
 It leverages the transformer architecture and is trained on both monolingual (from sources like CommonCrawl \cite{commoncrawl} and Wikipedia) and bilingual data (mined from web pages).
-LaBSE utilizes a dual-encoder structure with \ac{BERT}-based encoding modules.
+\ac{LaBSE} utilizes a dual-encoder structure with \ac{BERT}-based encoding modules.
 This setup enables the efficient processing of text pairs in multiple languages.
 
 % XLM-R
-\subsubsection{XLM-R} \label{model:xlm-roberta}
+\subsubsection{\ac{XLM-R}} \label{model:xlm-roberta}
 The \ac{XLM-R} model \cite{conneau2020unsupervised} is a significant advancement in unsupervised cross-lingual representation learning, introduced by Facebook AI.
 It is specifically designed to improve performance across a wide range of cross-lingual tasks.
 \ac{XLM-R} is pre-trained on a dataset dubbed 'CC-100', derived from Common Crawl \cite{commoncrawl}, covering about 2.5 terabytes of text across 100 languages.
@@ -278,7 +278,7 @@ This is study incorporates two models developed by MixedBread AI, mxbai-embed-la
 % Nomic Embed
 \subsubsection{Nomic-Embed-v1 and Nomic-Embed-v1.5} \label{model:nomic-embed}
 The Nomic model \cite{nussbaum2024nomic}, focuses on generating high-quality embeddings for long-context text in a reproducible manner.
-It leverages a modified BERT architecture specifically optimized for handling sequences of up to 8192 tokens.
+It leverages a modified \ac{BERT} architecture specifically optimized for handling sequences of up to 8192 tokens.
 This optimization includes innovative techniques like rotary positional embeddings and SwiGLU activations, which enhance the model's capacity to process longer texts effectively.
 The training process for Nomic Embed employs a two-stage approach.
 The first stage involves unsupervised contrastive pre-training on large-scale datasets.
@@ -292,7 +292,7 @@ This approach offers developers greater flexibility in terms of embedding size, 
 While there may be a slight reduction in performance, developers can choose a smaller embedding size if computational resources are limited.
 
 % GTE
-\subsubsection{GTE and GTE-v1.5} \label{model:gte}
+\subsubsection{\ac{GTE} and \ac{GTE}-v1.5} \label{model:gte}
 The \ac{GTE} model is a pivotal development in \ac{NLP}, utilizing a deep Transformer encoder based on a \ac{BERT}-like architecture for generating dense text embeddings.
 Initially, the \ac{GTE} model is unsupervisedly pre-trained on approximately 800 million text pairs from diverse web sources, enabling broad semantic coverage.
 It then undergoes supervised fine-tuning with 3 million annotated text triples from varied datasets, including MS MARCO and Natural Questions, applying contrastive learning to enhance text relevance detection and similarity assessments.
@@ -301,10 +301,10 @@ This dual-stage training strategy equips the \ac{GTE} model to excel in complex 
 There is also updated version \ac{GTE}-v1.5.
 
 % BGE
-\subsubsection{BGE-v1.5} \label{model:bge}
-\ac{BGE} Models \cite{xiao2024cpack} are built on a BERT-like architecture, available in three sizes: small, base, and large.
+\subsubsection{\ac{BGE}-v1.5} \label{model:bge}
+\ac{BGE} Models \cite{xiao2024cpack} are built on a \ac{BERT}-like architecture, available in three sizes: small, base, and large.
 They are trained using a sophisticated multi-stage process involving pre-training on large unlabeled data, contrastive learning for fine-tuning on text pairs, and multi-task learning with high-quality labeled datasets.
-This training regimen equips BGE models to handle a wide range of text embedding tasks with high efficiency and accuracy.
+This training regimen equips \ac{BGE} models to handle a wide range of text embedding tasks with high efficiency and accuracy.
 
 % GIST-Embedding-v0
 \subsubsection{GIST-Embedding-v0}
@@ -332,7 +332,7 @@ This study incorporates two distilled transformer models from TaylorAI for evalu
 \subsubsection{Ember-v1}
 This study leverages the Ember-v1 model, developed by LLMRails.
 Ember-v1 is a text embedding model trained on a comprehensive dataset of text pairs encompassing a wide range of domains such as finance, science, medicine, law, and beyond.
-Notably, the training process incorporates techniques inspired by both RetroMAE \cite{xiao2022retromae} and SetFit \cite{tunstall2022efficient}. 
+Notably, the training process incorporates techniques inspired by both \ac{RetroMAE} \cite{xiao2022retromae} and SetFit \cite{tunstall2022efficient}. 
 
 
 % Snowflake-Arctic-Embed
@@ -376,7 +376,7 @@ Chosen parameters are shown at \reftab{table:RAG_settings}
 
 \input{src/tables/RAG_settings.tex}
 
-\subsection{RAG pipeline}
+\subsection{\ac{RAG} pipeline}
 
 This section describes the evaluation methodology employed for the \ac{RAG} model.
 The evaluation will be conducted using the \textit{jirkoada/qa\_evaluator} \footnote {\textit{jirkoada/qa\_evaluator} on github: \url{https://github.com/jirkoada/qa_evaluator}} tool.
@@ -401,14 +401,14 @@ This is a 14nm mobile processor featuring 4 cores and 8 threads with a base cloc
 % \begin{itemize}
 %     \item Describe the evaluation process for different text representations.
 %       \begin{itemize}
-%         \item{Specify the chosen word, sentence, and paragraph representation models (e.g., FastText, BERT variants).}
+%         \item{Specify the chosen word, sentence, and paragraph representation models (e.g., FastText, \ac{BERT} variants).}
 %         \item{Explain the usage of analogy tests and confusion matrices for evaluation.}
 %         \item{Detail the selection process for the UPV corpus set and its suitability for technical \ac{QA} tasks.}
 %       \end{itemize}
-%     \item Outline the second part of the study focusing on \ac{RAG} for technical QA.
+%     \item Outline the second part of the study focusing on \ac{RAG} for technical \ac{QA}.
 %       \begin{itemize}
 %         \item{Explain the \ac{RAG} algorithm and its reliance on text representations.}
-%         \item{Describe the evaluation approach for selecting optimal representations for RAG.}
+%         \item{Describe the evaluation approach for selecting optimal representations for \ac{RAG}.}
 %         \item{Mention the factors considered during evaluation, such as embedding efficiency, text chunk size, and factuality of generated answers.}
 %       \end{itemize}
 % \end{itemize}
