change table style

--- a/src/tables/UPV_ntests.tex
+++ b/src/tables/UPV_ntests.tex
@@ -1,6 +1,6 @@
 \begin{table}[!ht] 
     \centering   
-    \begin{tabular}{ |p{2cm}||p{3cm}| }
+    \begin{tabular}{ |p{2cm}|p{3cm}| }
         \hline
         Tests set & Number of tests \\
         \hline
