--- a/src/tables/RAG_settings.tex
+++ b/src/tables/RAG_settings.tex
@@ -1,15 +1,15 @@
 \begin{table}[!ht] 
     \centering   
-    \begin{tabular}{|l|c|c|}
-        \hline
+    \begin{tabular}{lcc}
+        \toprule
         Chunk size & $K$ \\
-        \hline
+        \midrule
         256        & 12  \\
         512        & 6   \\
         1024       & 3   \\
         2048       & 2   \\
         4096       & 1   \\
-        \hline
+        \bottomrule
     \end{tabular}
     \caption{Chunk sizes and corresponding $K$ parameter.}
     \label{table:RAG_settings}
