change \midrule to \hline

--- a/src/tables/evaluation.tex
+++ b/src/tables/evaluation.tex
@@ -3,7 +3,7 @@
     \begin{tabular}{lcccccc}
       \toprule
       \textbf{Model} & \textbf{QMA}\textsubscript{d} & \textbf{AMA}\textsubscript{d} & \textbf{QMA}\textsubscript{dl} & \textbf{AMA}\textsubscript{dl} & \textbf{\#params} \\
-      \midrule
+      \hline
       \multicolumn{6}{c}{BASELINE} \\
       \hline
       FastText\textsubscript{diacritics} & 0.8304 & 0.2899 & 0.8110 & 0.2923 & 240M \\
