fix equations numbering

--- a/src/document_setup.tex
+++ b/src/document_setup.tex
@@ -100,10 +100,11 @@
   urlcolor=cvutblue
 }
 
-%% | --------------- figures, tables numbering ---------------- |
+%% | --------- figures, tables, equations numbering ----------- |
 
 \counterwithout{table}{chapter}
 \counterwithout{figure}{chapter}
+\counterwithout{equation}{chapter}
 
 %% | -------------------------- tikz -------------------------- |
 
